--- a/01-pipe_tidyverse_e_nativo/index.html
+++ b/01-pipe_tidyverse_e_nativo/index.html
@@ -1213,15 +1213,7 @@ margin-right: 0; }
 <h2>O que você encontra aqui?</h2>
 <ul>
 <li class="fragment">Aulas <strong>curtas</strong> e <strong>objetivas</strong></li>
-<li class="fragment">Materiais no Github:</li>
-</ul>
-</section>
-<section id="links-de-referência" class="slide level2">
-<h2>Links de referência</h2>
-<p>As seguintes fontes foram utilizadas:</p>
-<ul>
-<li class="fragment"><a href="https://stackoverflow.com/questions/67633022/what-are-the-differences-between-rs-new-native-pipe-and-the-magrittr-pipe">Stackoverflow</a></li>
-<li class="fragment"><a href="https://towardsdatascience.com/understanding-the-native-r-pipe-98dea6d8b61b">Understanding the native pipe - Isabella Velásquez</a></li>
+<li class="fragment">Materiais no Github: <a href="https://github.com/wrprates/aulas-curtas" class="uri">https://github.com/wrprates/aulas-curtas</a></li>
 </ul>
 </section>
 <section id="o-primeiro-pipe-do-pacote-magrittr" class="slide level2">
@@ -1241,6 +1233,14 @@ margin-right: 0; }
 </section>
 <section id="o-novo-pipe-incorporado-ao-r-base" class="slide level2">
 <h2>O novo pipe: <code>|&gt;</code> incorporado ao R-base</h2>
+</section>
+<section id="links-de-referência" class="slide level2">
+<h2>Links de referência</h2>
+<p>As seguintes fontes foram utilizadas:</p>
+<ul>
+<li class="fragment"><a href="https://stackoverflow.com/questions/67633022/what-are-the-differences-between-rs-new-native-pipe-and-the-magrittr-pipe">Stackoverflow</a></li>
+<li class="fragment"><a href="https://towardsdatascience.com/understanding-the-native-r-pipe-98dea6d8b61b">Understanding the native pipe - Isabella Velásquez</a></li>
+</ul>
 <div class="footer footer-default">
 
 </div>
