Instalação do Janitor
Instalação do Janitor e atualização do lock file do renv.

--- a/02-limpeza_de_dados_no_r/index.html
+++ b/02-limpeza_de_dados_no_r/index.html
@@ -1318,7 +1318,7 @@ display: none;
 <h2>Links de referência</h2>
 <p>As seguintes fontes foram utilizadas:</p>
 <ul>
-<li class="fragment"><a href="https://cran.r-project.org/web/packages/janitor/vignettes/janitor.html">cran.r-project.org</a></li>
+<li class="fragment"><a href="https://cran.r-project.org/web/packages/janitor/vignettes/janitor.html">cran.r-project.org - Janitor</a></li>
 </ul>
 <div class="footer footer-default">
 
